--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alpabate clash</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <!-- home section -->
+    <section class="home">
+
+    </section>
+    <!-- play ground section -->
+    <section class="play-ground">
+
+    </section>
+    <!-- end the game and score -->
+    <section class="score">
+
+    </section>
+
 </body>
+
 </html>
