add to the life score

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <button class="btn bg-gray-800 border-none text-blue-700">
                     <span>life</span>
                     <img  src="images/life.svg" alt="">
-                    <span>1</span>
+                    <span id="life-count">5</span>
                 </button>
                 <button class="btn  bg-gray-800 border-none text-blue-700"">
                     <span>score</span>
