add to the life score

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </section>
         <!-- end the game and score -->
-        <section class="score flex justify-center min-h-screen items-center hidden">
+        <section id="finalSection" class="score flex justify-center min-h-screen items-center hidden">
             <div class="text-white text-center space-y-6  bg-[#FFFFFFaa] p-4 rounded-sm">
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
